Fix various pane animation sizing issues
* Search pane wasn't completely invisible when collapsed after all panes max width
* Set better defaults to pane widths
* Fix issue where filters and workspaces weren't involved in calculating graph padding (size to fit broken)

--- a/web/src/main/webapp/css/util/constants.less
+++ b/web/src/main/webapp/css/util/constants.less
@@ -6,4 +6,4 @@
 
 @graph-zIndex: 50;
 
-@pane-animation-distance: 500px;
+@pane-animation-distance: 600px;
